--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.12)
-include(lib/pico-sdk/external/pico_sdk_import.cmake)
+include(pico_sdk_import.cmake)
 
 project(VersaTerm C CXX ASM)
 set(CMAKE_C_STANDARD 11)
